k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amaniquery
  labels:
    name: amaniquery
    app: amaniquery
